# emporium

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
gamedata/: .gitignore  Cargo.toml  build.rs
gamedata/res/2.0.0/: README.md  cards.json  encounters.json  skills.json
gamedata/src/: lib.rs
gamedata/src/v2_0_0/: mod.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/src/interop/: mod.rs  simulation.rs  texture.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/v2_0_0/: card.rs  combat_card_encounter.rs  data.rs  enchant.rs  encounter.rs  hero.rs  mod.rs  pack_id.rs  re.rs  size.rs  skill.rs  tag.rs  tier.rs
models/src/v2_0_0/tooltip/: base.rs  card_target.rs  card_target_condition.rs  condition.rs  effect.rs  effect_event.rs  effect_value.rs  global_event.rs  mod.rs  modifier.rs  obtained_item.rs  player_target.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/v2_0_0/: cards.rs  encounters.rs  json.rs  mod.rs  skills.rs  wrappers.rs
serializer/: Cargo.toml
serializer/src/: main.rs
simulator/: Cargo.toml
simulator/benches/: benchmark_simulation.rs
simulator/benches/simulations/: complex.toml
simulator/src/: card_index.rs  combat_event.rs  dispatch.rs  draw_type.rs  lib.rs  result.rs  simulation.rs  statics.rs  summary.rs  template.rs  tick.rs
simulator/src/card/: base_card.rs  id.rs  mod.rs  modification.rs  template.rs
simulator/src/player/: base_player.rs  health.rs  mod.rs  template.rs
simulator/tests/: init.rs  test_card_ids.rs  test_cleanse.rs  test_defeat.rs  test_draw.rs  test_invalid_sim.rs  test_sanity.rs  test_simulations.rs  test_target_matching.rs  test_victory.rs
simulator/tests/aux/: card_templates.rs  mod.rs  sim.rs
simulator/tests/simulations/defeat/: 0_hp_player.toml  burn_poison_low.toml  crit_chance.toml  damage_poison_low.toml  frozen_mirror_inverse.toml  regen_opponent.toml  simple_defeat.toml
simulator/tests/simulations/draw/simultaneous_defeat/: frozen_mirror_radiant.toml  heavy_radiant.toml  identical.toml
simulator/tests/simulations/draw/timeout/: timeout.toml
simulator/tests/simulations/invalid/: invalid_opponent.toml  invalid_player.toml  invalid_tier.toml
simulator/tests/simulations/invalid/sim/: too_many_large_items.toml  too_many_medium_items.toml  too_many_small_items.toml
simulator/tests/simulations/invalid/template/: no_opponent.toml  no_player.toml
simulator/tests/simulations/victory/: 0_hp_opponent.toml  adjacent_value.toml  burn_poison_high.toml  crit_chance.toml  damage_poison_high.toml  fiery.toml  frozen_mirror.toml  haste.toml  heavy.toml  icy.toml  regen.toml  regen_card.toml  regen_player.toml  restorative.toml  shielded.toml  simple_burn.toml  simple_poison.toml  simple_victory.toml  tier.toml  toxic.toml  value_damage.toml
