[package]
name = "gamedata"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
heck = "0.5.0"
parser = { path = "../parser" }
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros"] }

[dependencies]
lazy_static = "1.5.0"
models = { path = "../models" }

[features]
thumbnails = ["parser/thumbnails"]
thumbnail-backdrops = ["parser/thumbnail-backdrops"]
