[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
image = { version = "0.25.6", features = ["avif-native"] }
gamedata = { path = "../gamedata" }
models = { path = "../models" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
