[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
image = { version = "0.25.6", features = ["avif-native"] }
gamedata = { path = "../gamedata" }
models = { path = "../models" }
simulator = { path = "../simulator" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
toml = "0.8.22"
anyhow = "1.0.98"
num_cpus = "1.16.0"
lazy_static = "1.5.0"
egui-file-dialog = "0.10.0"

[features]
default = []
thumbnails = ["gamedata/thumbnails"]
thumbnail-backdrops = ["gamedata/thumbnail-backdrops"]
