[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
heck = "0.5.0"
models = { path = "../models", features = ["v2_0_0"] }
prettyplease = "0.2.32"
reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
syn = { version = "2", default-features = false, features = [
    "full",
    "parsing",
] }
image = { version = "0.25.6", features = ["avif-native"], optional = true }

[features]
default = []
thumbnails = ["reqwest"]
thumbnail-backdrops = ["thumbnails", "image"]
